# rust-simple-svg

./: Cargo.toml  README.md  TESTING.md
.github/workflows/: rust.yml
access_file/: Cargo.toml
src/: define.rs  defines.rs  gadget.rs  lib.rs  lib_tests.rs  tools.rs
src/define/: GROUP.md  SVG.md  filter.rs  group.rs  polygon.rs  shape.rs  sstyle.rs  svg.rs  viewbox.rs  widget.rs
src/define/shape/: ARROW.md  CIRCLE.md  ELLIPSE.md  FILTER.md  GRADIENT.md  LINE.md  MARKER.md  PATH.md  POLYGON.md  POLYLINE.md  RECT.md  TEXT.md  arrow.rs  circle.rs  ellipse.rs  filter.rs  gradient.rs  line.rs  marker.rs  path.rs  polygon.rs  polyline.rs  rect.rs  text.rs
src/defines/: arrow.rs  circle.rs  filter.rs  format.rs  gradient.rs  group.rs  marker.rs  path.rs  polyline.rs  rect.rs  shape.rs  sstyle.rs  svg.rs  text.rs  widget.rs
src/gadget/: TABLE.md  table.rs
src/lib_tests/: lib_test.rs  mod.rs
tests/: arrow_test.rs  background_test.rs  basic_test.rs  circle_test.rs  ellipse_test.rs  empty_svg_test.rs  empty_test.rs  fern_test.rs  filter_test.rs  five_circles_test.rs  gradient_test.rs  group_test.rs  line_test.rs  logo_racket_test.rs  logo_test.rs  marker_test.rs  path_arc_test.rs  path_ccurve_test.rs  path_lineto_test.rs  path_moveto_test.rs  path_qcurve_test.rs  path_raw_test.rs  path_test.rs  polygon_test.rs  polyline_test.rs  rect_in_background_test.rs  rect_test.rs  recursive_test.rs  svg_test.rs  table2_test.rs  table3_test.rs  table_test.rs  text_test.rs  viewbox_test.rs
tests/rect/: main.rs
