[package]
name = "simple_svg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple svg generate tool to create svg programtically"
exclude = ["/showcase", "/tests"]

[profile.release]
opt-level = 3

[dependencies]
num = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.1"


